# RTSoftSummerSchool2021

./: .gitignore  README.md
1.1/: README.md  usb-added.sh  usb-log-saver.rules
1.2/: ADC_Test.c  Makefile  README.md  main.c  modules.order
2.1/: Dockerfile  README.md
2.2/: CMakeLists.txt  Dockerfile  README.md
2.2/src/: main.cpp
3/: CMakeLists.txt  Dockerfile  README.md
3/data/: video.mkv
3/src/: main.cpp
4/: .dockerignore  README.md  compile_commands.json  docker-compose.yml
4/consumer/: Dockerfile  index.js  package-lock.json  package.json
4/detector/: CMakeLists.txt  Dockerfile
4/detector/src/: main.cpp
4/detector/src/node_broker/: index.js  package-lock.json  package.json
5/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
5/http/: index.js  package.json
5/http/html/: index.html
5/src/: main.cpp
